# filebeam

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
filebeam/: __init__.py  cli.py  config.py
filebeam/providers/: __init__.py  base.py  github_gist.py
skills/filebeam/: SKILL.md
